<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aluno.intencoes.SobreActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_weight="1"
        android:textColor="@color/colorAccent"
        android:gravity="bottom|center"
        android:textSize="24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo"
        android:layout_weight="1"
        android:gravity="top|center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fechar"
        android:onClick="fechar"/>

</LinearLayout>
